<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.scorekeeperapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/team_layout_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="@dimen/team_padding_horizontal"
            android:paddingLeft="@dimen/team_padding_horizontal"
            android:paddingRight="@dimen/team_padding_horizontal"
            android:paddingStart="@dimen/team_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_a_text"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/score_top_margin"
                android:gravity="center"
                android:text="@string/score_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/team_a_score_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/score_text_size"
                tools:text="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fouls_top_margin"
                android:gravity="center"
                android:text="@string/fouls_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/team_a_fouls_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/fouls_text_size"
                tools:text="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/points_button_top_margin"
                android:onClick="addPointTeamA"
                android:text="@string/plus_one_point_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fouls_button_top_margin"
                android:onClick="addFoulTeamA"
                android:text="@string/add_foul_text" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/vertical_divider_width"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/vertical_divider_margin_bot"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="@dimen/team_layout_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="@dimen/team_padding_horizontal"
            android:paddingLeft="@dimen/team_padding_horizontal"
            android:paddingRight="@dimen/team_padding_horizontal"
            android:paddingStart="@dimen/team_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_b_text"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/score_top_margin"
                android:gravity="center"
                android:text="@string/score_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/team_b_score_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/score_text_size"
                tools:text="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fouls_top_margin"
                android:gravity="center"
                android:text="@string/fouls_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/team_b_fouls_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/fouls_text_size"
                tools:text="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/points_button_top_margin"
                android:onClick="addPointTeamB"
                android:text="@string/plus_one_point_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fouls_button_top_margin"
                android:onClick="addFoulTeamB"
                android:text="@string/add_foul_text" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:text="@string/reset_text" />

</RelativeLayout>
